---
source: crates/ruff_python_parser/src/parser/tests/context.rs
expression: parse_ast
---
[
    With(
        StmtWith {
            range: 0..17,
            is_async: false,
            items: [
                WithItem {
                    range: 5..11,
                    context_expr: NumberLiteral(
                        ExprNumberLiteral {
                            range: 5..6,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                    optional_vars: Some(
                        Name(
                            ExprName {
                                range: 10..11,
                                id: "x",
                                ctx: Store,
                            },
                        ),
                    ),
                },
            ],
            body: [
                Pass(
                    StmtPass {
                        range: 13..17,
                    },
                ),
            ],
        },
    ),
]
